--- a/Main(Autosaved).xaml
+++ b/Main(Autosaved).xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="2332,3888" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="2332,3590" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="24">
       <x:String>System.Activities</x:String>
@@ -50,7 +50,7 @@
       <AssemblyReference>System.Memory</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="2312,3788" sap2010:WorkflowViewState.IdRef="Sequence_4">
+  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="2312,3530" sap2010:WorkflowViewState.IdRef="Sequence_4">
     <Sequence.Variables>
       <Variable x:TypeArguments="sd:DataTable" Name="bankData" />
       <Variable x:TypeArguments="sd:DataTable" Name="glData" />
@@ -173,21 +173,21 @@
         </ActivityAction>
       </ui:ForEachRow.Body>
     </ui:ForEachRow>
-    <While sap:VirtualizedContainerService.HintSize="2270,2208" sap2010:WorkflowViewState.IdRef="While_1">
+    <While sap:VirtualizedContainerService.HintSize="2270,1950" sap2010:WorkflowViewState.IdRef="While_1">
       <While.Variables>
         <Variable x:TypeArguments="x:Int32" Default="0" Name="rowNumber" />
       </While.Variables>
       <While.Condition>
         <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="rowNumber&lt;bankData.Rows.Count" sap2010:WorkflowViewState.IdRef="VisualBasicValue`1_1" />
       </While.Condition>
-      <Sequence sap:VirtualizedContainerService.HintSize="2224,2050" sap2010:WorkflowViewState.IdRef="Sequence_5">
+      <Sequence sap:VirtualizedContainerService.HintSize="2224,1792" sap2010:WorkflowViewState.IdRef="Sequence_5">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
         <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="2182,61" sap2010:WorkflowViewState.IdRef="WriteLine_24" Text="[(rowNumber+2).ToString]" />
-        <If Condition="[bankData.Rows(rowNumber)(&quot;NUMBER&quot;).ToString.Trim=&quot;90182&quot;]" sap:VirtualizedContainerService.HintSize="2182,1757" sap2010:WorkflowViewState.IdRef="If_2">
+        <If Condition="[bankData.Rows(rowNumber)(&quot;NUMBER&quot;).ToString.Trim=&quot;90182&quot;]" sap:VirtualizedContainerService.HintSize="2182,1499" sap2010:WorkflowViewState.IdRef="If_2">
           <If.Then>
             <ui:ExcelApplicationScope Password="{x:Null}" AutoSave="False" CreateNewFile="False" DisplayName="Excel Application Scope" sap:VirtualizedContainerService.HintSize="434,288" sap2010:WorkflowViewState.IdRef="ExcelApplicationScope_3" Visible="False" WorkbookPath="Data for bank recon.xlsx">
               <ui:ExcelApplicationScope.Body>
@@ -215,7 +215,7 @@
             </ui:ExcelApplicationScope>
           </If.Then>
           <If.Else>
-            <If Condition="[bankData.Rows(rowNumber)(&quot;NUMBER&quot;).ToString.Trim=&quot;&quot; OR bankData.Rows(rowNumber)(&quot;NUMBER&quot;).ToString.Trim=&quot;-&quot;]" sap:VirtualizedContainerService.HintSize="1703,1609" sap2010:WorkflowViewState.IdRef="If_1">
+            <If Condition="[bankData.Rows(rowNumber)(&quot;NUMBER&quot;).ToString.Trim=&quot;&quot; OR bankData.Rows(rowNumber)(&quot;NUMBER&quot;).ToString.Trim=&quot;-&quot;]" sap:VirtualizedContainerService.HintSize="1703,1351" sap2010:WorkflowViewState.IdRef="If_1">
               <If.Then>
                 <Sequence sap:VirtualizedContainerService.HintSize="476,380" sap2010:WorkflowViewState.IdRef="Sequence_3">
                   <sap:WorkflowViewStateService.ViewState>
@@ -237,7 +237,7 @@
                               <x:Boolean x:Key="IsPinned">False</x:Boolean>
                             </scg:Dictionary>
                           </sap:WorkflowViewStateService.ViewState>
-                          <ui:ExcelWriteCell Cell="[&quot;F&quot;+(rowNumber+2).ToString]" DisplayName="Write Cell" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="ExcelWriteCell_2" SheetName="BANK" Text="NUMBER EMPTY" />
+                          <ui:ExcelWriteCell Cell="[&quot;F&quot;+(rowNumber+2).ToString]" DisplayName="Write Cell" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="ExcelWriteCell_2" SheetName="BANK" Text="-" />
                         </Sequence>
                       </ActivityAction>
                     </ui:ExcelApplicationScope.Body>
@@ -251,9 +251,9 @@
                 </Sequence>
               </If.Then>
               <If.Else>
-                <If Condition="[bankData.Rows(rowNumber)(&quot;NUMBER&quot;).ToString.IsNumeric]" sap:VirtualizedContainerService.HintSize="1182,1461" sap2010:WorkflowViewState.IdRef="If_3">
+                <If Condition="[bankData.Rows(rowNumber)(&quot;NUMBER&quot;).ToString.IsNumeric]" sap:VirtualizedContainerService.HintSize="1182,1203" sap2010:WorkflowViewState.IdRef="If_3">
                   <If.Then>
-                    <Sequence sap:VirtualizedContainerService.HintSize="516,1313" sap2010:WorkflowViewState.IdRef="Sequence_24">
+                    <Sequence sap:VirtualizedContainerService.HintSize="516,977" sap2010:WorkflowViewState.IdRef="Sequence_24">
                       <Sequence.Variables>
                         <Variable x:TypeArguments="x:Double" Name="amountGL" />
                       </Sequence.Variables>
@@ -303,7 +303,7 @@
                         </Assign.Value>
                       </Assign>
                       <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="474,61" sap2010:WorkflowViewState.IdRef="WriteLine_30" Text="[accNumber+&quot;: &quot;+amount]" />
-                      <TryCatch DisplayName="Try Catch" sap:VirtualizedContainerService.HintSize="474,519" sap2010:WorkflowViewState.IdRef="TryCatch_4">
+                      <TryCatch DisplayName="Try Catch" sap:VirtualizedContainerService.HintSize="474,183" sap2010:WorkflowViewState.IdRef="TryCatch_4">
                         <TryCatch.Try>
                           <ui:LookupDataTable LookupColumnIndex="{x:Null}" LookupDataColumn="{x:Null}" RowIndex="{x:Null}" TargetColumnIndex="{x:Null}" TargetDataColumn="{x:Null}" DataTable="[glData2]" DisplayName="Lookup Data Table" sap:VirtualizedContainerService.HintSize="200,22" sap2010:WorkflowViewState.IdRef="LookupDataTable_7" LookupColumnName="Line Description" LookupValue="[accNumber]" TargetColumnName="Debit LC">
                             <ui:LookupDataTable.CellValue>
@@ -312,10 +312,10 @@
                           </ui:LookupDataTable>
                         </TryCatch.Try>
                         <TryCatch.Catches>
-                          <Catch x:TypeArguments="s:SystemException" sap:VirtualizedContainerService.HintSize="440,357" sap2010:WorkflowViewState.IdRef="Catch`1_4">
+                          <Catch x:TypeArguments="s:SystemException" sap:VirtualizedContainerService.HintSize="400,21" sap2010:WorkflowViewState.IdRef="Catch`1_4">
                             <sap:WorkflowViewStateService.ViewState>
                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                                <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                                <x:Boolean x:Key="IsExpanded">False</x:Boolean>
                                 <x:Boolean x:Key="IsPinned">False</x:Boolean>
                               </scg:Dictionary>
                             </sap:WorkflowViewStateService.ViewState>
